# Project_PI

./: .gitignore  README.md
EM_project/: CMakeLists.txt  CMakeLists.txt.user.b0eeea9  Graph_parser.cpp  Menu.qml  SimplePage.qml  autors.cpp  autors.h  button.qml  cppconnection.cpp  cppconnection.h  em_proj.cpp  em_proj.h  graph_parser.h  human.cpp  human.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  mygraphicsview.cpp  mygraphicsview.h  myqgraphicsrectiten.cpp  myqgraphicsrectiten.h  parser.cpp  parser.h  qml.qrc  startwidget.cpp  startwidget.h
EM_project/examples/: 1_dot_ex.txt  1_graph_ex.graph  2_dot_ex.txt  2_graph_ex.graph
